# GRC22

./: .cmake-format.yaml  .cproject  .gitignore  .gitmodules  .mxproject  .project  20240129 Gen5 CAN DB.dbc  AN400ECU.dbc  APPS_FW_22.ioc  APPS_FW_22.launch  AccumulatorPCB Debug (1).launch  AccumulatorPCB Debug.launch  AccumulatorPCB.ioc  CMakeLists.txt  CODEOWNERS  Dash.dbc  DockerFile  Orion_CANBUS.dbc  README.md  RLM.dbc  SMU.dbc  STM32F767ZITX_FLASH.ld  VCU.dbc  conanfile.py  dbc_to_protobuf.py  platformio.ini  readme.md  sdkconfig.esp32doit-devkit-v1
ConanProfiles/: Linux-gcc-12-Debug.ini  Linux-gcc-12-Release.ini  MacOS-clang-Release.ini  pi4b-Debug.ini  pi4b-Release.ini  pib+-Host-CC-Release.ini  pib+-Release.ini
DBCs/: Orion_CANBUS.dbc  README.md  RLM.dbc  dbc_to_protobuf.py
Dash/: .gitignore
Dash/software/src/Dash/: CMakeLists.txt  DemoDash.cpp  GryphonDash.desktop  main2019.qml
Dash/software/src/Dash/Debug/: Debug_B.qml
Dash/software/src/Dash/Drive/: DataBox.qml
Dash/software/src/Dash/Tuning/: TractionControl.qml
Debug/: AccumulatorPCB.elf  AccumulatorPCB.list  AccumulatorPCB.map  makefile
Footprints/: 256Mount.kicad_mod  3386P-1-103LF.kicad_mod  430451227_12Pin.kicad_mod  5190TR.kicad_mod  691219610002_2Pin.dcm  691219610002_2PinTERM.kicad_mod  6X6.kicad_mod  7X7.kicad_mod  8X8.kicad_mod  B02BPASKLFSN.kicad_mod  B06BPASKLFSN.kicad_mod  BZX55B62-TR.kicad_mod.mod  BatteryHolder.kicad_mod  CONV_B0512LS-1WR3.kicad_mod  CONV_RS3E-1205S_H3.kicad_mod  CR2032-THRU.kicad_mod  CUI_TBL001-500-02GY-2GY.kicad_mod  DIOAD1898W129L762D1143.kicad_mod  ESP32.kicad_mod  F1205D_1WR3.kicad_mod  FUSE_0154004.DRTL.kicad_mod  FUSE_3557-2.kicad_mod  GRCBanner.kicad_mod  GRC_BannerLarge.kicad_mod  GRC_Logo.kicad_mod  GY-521.kicad_mod  LM311PW.kicad_mod  MODULE_ESP32_DEVKIT_V1.kicad_mod  MOLEX_430451222.kicad_mod  MOLEX_503398-1892.kicad_mod  MicroSD-Module.kicad_mod  NRF24L01.kicad_mod  OPTO_4N35SM.kicad_mod  OSC_ECS-TXO-2520-33-160-AN-TR.kicad_mod  POWERDI-123.kicad_mod  PQFN50P300X300X80-16N.kicad_mod  PushButton.kicad_mod  SIP750W50P254L1160H1014Q4.kicad_mod  SOD57-10.kicad_mod  SOIC127P600X180-8N.kicad_mod  (+13 more)
Models/: 0436500427--3DModel-STEP-231308.STEP  2002411114.step  3557-2.step  430451427.step  430451627.step  436500815--3DModel-STEP-390490.STEP  67997-272HLF--3DModel-STEP-533217.STEP  BusBarPad.STEP  Fuse.SLDPRT  MC14043BDG.step  MC14081BDG.step  Molex_-_43650-0227_.step
Remote-Logging-Module/: .gitmodules  README.md
SMU-Firmware/: .cproject  .mxproject  AccumulatorPCB Debug.launch
Symbols/: AMS1117-3.3.kicad_sym  B0512LS-1WR3.kicad_sym  CD4043BDW.kicad_sym  MC14106BDTR2G.kicad_sym  MC7805CDTRKG.kicad_sym  NVT2010PW.kicad_sym  RV-3032-C7-32.768KHZ-3PPM-TA-QA.kicad_sym  Remote-Logging-Module.kicad_sym  SD-Card-Module.kicad_sym  SD-RSMT-2-MQ-WF.lib  SMU02M-05.kicad_sym  SN74LV21ADR.kicad_sym  SPBW06F-12.lib  STM32F103C8T6.kicad_sym  STM32F429I-DISC1.kicad_sym  TractiveSystemPCBv2.dcm  U3V40x.kicad_sym  glv-.kicad_sym
VCU-Firmware/: README.md
hardware/: DashShield.kicad_pcb  DashShield.kicad_sch  RLM.kicad_pcb  RLM.kicad_pro  RLM.kicad_sch  RLM.step  fp-lib-table  sym-lib-table  ~_autosave-RLM.kicad_pcb.lck
include/: BN220.pb.h  MPU6050.pb.h  ams.h  can.h  (+5 more)
software/: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  build_protos.py  conanfile.py  dbc_to_protobuf.py  foxglove_retransmit.py  platformio.ini
software/ConanProfiles/: Ubuntu-gcc-11-Release.ini  VS2022-Debug.ini  VS2022-Release.ini
software/back-end/: platformio.ini
software/back-end/proto/: MPU6050.proto
software/foxglove/: foxglove_server.py  requirements.txt
software/include/: message.pb.h  rlm.c  rlm.h
software/proto/: BN220.proto  CAN.proto
software/protos/: CAN.proto  CAN_2.proto
software/scripts/: build_protos.py  foxglove_retransmit.py
software/src/: CMakeLists.txt  RLMPacket.proto  foxglove_server.py  main_receiver.cpp  main_transmitter.cpp  message.proto  rlm.c  rlm.h
software/src/BusDump/: BusDump.cpp  CMakeLists.txt  Dump.cpp  Dump.hpp
software/src/CANLib/: CMakeLists.txt
software/src/CANLib/Interface/: DBCInterface.hpp  Interface.cpp  Interface.hpp
software/src/CANLib/Tools/: tools.cpp
software/src/Dash/: CMakeLists.txt  fake.cpp  main.cpp  main.qml  qml.qrc
software/src/Dash/Debug/: BatteryTemp.qml  DataBox.qml  Debug_A.qml  Debug_C.qml  Debug_D.qml  SMU_Temps.qml  SectionHeader.qml  Segment.qml  cell_Resistance.qml  cell_Volts.qml
software/src/Dash/Drive/: Battery.qml  DataBox.qml  DisplayBox.qml  Drive.qml  Indicator.qml  PedalPosBox.qml  SpeedBox.qml
software/src/Dash/Tuning/: TractionControl.qml  Tuning.qml
software/src/FGLoggerLib/: CMakeLists.txt  FGLogger.cpp  FGLogger.hpp
software/src/Interfaces/: CMakeLists.txt
software/src/Interfaces/Frontend/: BMS.cpp  BMS.hpp  EnergyMeter.cpp  EnergyMeter.hpp  FakeInterface.cpp  MotorController.cpp  SMU.hpp  VCU.hpp
software/src/Interfaces/Full/: AN400ECU.hpp  BMS.hpp  EnergyMeter.hpp  FGCANLogger.hpp  FGLogger.hpp  MotorController.hpp  SMU.hpp  VCU.hpp
software/src/Interfaces/Full/DBCs/: SMU_CANBUS.dbc  vcu.dbc
software/src/Interfaces/Full/TorqueMaps/: tc_tune_0.csv  tc_tune_1.csv  tc_tune_2.csv  tc_tune_3.csv  torque_map_0 copy.csv  torque_map_2.csv
src/Dash/: CMakeLists.txt  Dash2019.cpp  DemoDash.cpp  Drive.qml  dash.qml  demo.qml  main.cpp  main.qml  main2019.qml  qml.qrc
src/Dash/Debug/: DataBox.qml  Debug.qml  Debug_A.qml  Debug_B.qml  Debug_C.qml  Debug_D.qml  SectionHeader.qml  Template_2C.qml  Test.qml
src/Dash/Drive/: Battery.qml  DataBox.qml  Drive.qml  SpeedBox.qml
src/Dash/Tuning/: Tuning.qml
src/Interfaces/: CMakeLists.txt
src/Interfaces/Demo/: MotorController.hpp
src/Interfaces/Frontend/: AN400ECU.cpp  AN400ECU.hpp  BMS.cpp  BMS.hpp  EnergyMeter.cpp  EnergyMeter.hpp  FakeInterface.cpp  FakeInterface.hpp  MotorController.cpp  MotorController.hpp  VCU.hpp
src/Interfaces/Full/: AN400ECU.hpp  BMS.hpp  EnergyMeter.hpp  MotorController.hpp  Orion_CANBUS.dbc  VCU.dbc  VCU.hpp  torque_map_0.csv
src/Interfaces/Full/TorqueMaps/: torque_map_1.csv  torque_map_3.csv
(+173 files in other folders)
